fix: align text to center

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -42,6 +42,10 @@
   margin-top: 30px;
   font-size: 0.9rem;
   color: #666;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .powered-by img {
